Add support for css for desktop viewports

--- a/projects/amz-eg/index-orders.html
+++ b/projects/amz-eg/index-orders.html
@@ -6,7 +6,7 @@
     <title>Amazon.eg</title>
 
     <style>
-        /* @import url('https://fonts.cdnfonts.com/css/amazon-ember'); */
+        @import url('https://fonts.cdnfonts.com/css/amazon-ember');
         main {
             height: 130vh;
         }
@@ -100,10 +100,10 @@
                                 
                             <i class="main__main__content__orders-header--search--logo"></i>
                             </div>
-                            <span class="main__main__content__orders-header--search--field--container2">
+                            <div class="main__main__content__orders-header--search--field--container2">
                             <input type="search" class="main__main__content__orders-header--search--field" placeholder="Search orders">
                             <button type="button" class="main__main__content__orders-header--search--button">Search Orders</button>
-                            </span>
+                            </div>
                         </span>
                     </div> 
                 </div>
@@ -111,9 +111,9 @@
                 <div class="main__main__content__orders__page-tabs">
                     <ul class="page-tabs__list">
                         <li><a href="" class="page-tabs__tab page-tabs__tab-active">Orders</a></li>
-                        <li><a href="" class="page-tabs__tab">Orders</a></li>
-                        <li><a href="" class="page-tabs__tab">Orders</a></li>
-                        <li><a href="" class="page-tabs__tab">Orders</a></li>
+                        <li><a href="" class="page-tabs__tab">Buy it again</a></li>
+                        <li><a href="" class="page-tabs__tab">Not yet dispatched</a></li>
+                        <li><a href="" class="page-tabs__tab">Cancelled orders</a></li>
                     </ul>
                 </div>
 
@@ -175,7 +175,24 @@
                                         </a>
                                         <div class="orders__result--item--description">
                                             <a href="" class="orders__result--item--description--title">
-                                             Cleaning gel for car, car cleaning kit universal detailing automotive dust car crevice cleaner auto air vent interior detail removal putty cleaning keyboard cleaner for car vents, pc, laptops, cameras
+                                             Cleaning gel for car, car cleaning kit universal detailing automotive dust
+                                            </a>
+                                            <p class="orders__result--item--description--note">Return or replace items eligible</p>
+                                            <div class="orders__result--item--description--links">
+                                                <!-- <i src="./img/buy-again.png"></i> -->
+                                                <button type="button" class="yellow-button">Buy it again</button>
+                                                <button type="button" class="white-button">View your item</button>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="orders_result--item">
+                                        <a href="" class="orders__result--item--image">
+                                            <img src="./img/product-image.jpg" alt="screen protector">
+                                        </a>
+                                        <div class="orders__result--item--description">
+                                            <a href="" class="orders__result--item--description--title">
+                                             Cleaning gel for car, car cleaning kit universal detailing automotive dust
                                             </a>
                                             <p class="orders__result--item--description--note">Return or replace items eligible</p>
                                             <div class="orders__result--item--description--links">
@@ -191,23 +208,7 @@
                                         </a>
                                         <div class="orders__result--item--description">
                                             <a href="" class="orders__result--item--description--title">
-                                             Cleaning gel for car, car cleaning kit universal detailing automotive dust car crevice cleaner auto air vent interior detail removal putty cleaning keyboard cleaner for car vents, pc, laptops, cameras
-                                            </a>
-                                            <p class="orders__result--item--description--note">Return or replace items eligible</p>
-                                            <div class="orders__result--item--description--links">
-                                                <button type="button" class="yellow-button">Buy it again</button>
-                                                <button type="button" class="white-button">View your item</button>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="orders_result--item">
-                                        <a href="" class="orders__result--item--image">
-                                            <img src="./img/product-image.jpg" alt="screen protector">
-                                        </a>
-                                        <div class="orders__result--item--description">
-                                            <a href="" class="orders__result--item--description--title">
-                                             Cleaning gel for car, car cleaning kit universal detailing automotive dust car crevice cleaner auto air vent interior detail removal putty cleaning keyboard cleaner for car vents, pc, laptops, cameras
+                                             Cleaning gel for car, car cleaning kit universal detailing automotive dust
                                             </a>
                                             <p class="orders__result--item--description--note">Return or replace items eligible</p>
                                             <div class="orders__result--item--description--links">
@@ -275,7 +276,7 @@
                                         </a>
                                         <div class="orders__result--item--description">
                                             <a href="" class="orders__result--item--description--title">
-                                             Cleaning gel for car, car cleaning kit universal detailing automotive dust car crevice cleaner auto air vent interior detail removal putty cleaning keyboard cleaner for car vents, pc, laptops, cameras
+                                             Cleaning gel for car, car cleaning kit universal detailing automotive dust
                                             </a>
                                             <p class="orders__result--item--description--note">Return or replace items eligible</p>
                                             <div class="orders__result--item--description--links">
@@ -291,7 +292,7 @@
                                         </a>
                                         <div class="orders__result--item--description">
                                             <a href="" class="orders__result--item--description--title">
-                                             Cleaning gel for car, car cleaning kit universal detailing automotive dust car crevice cleaner auto air vent interior detail removal putty cleaning keyboard cleaner for car vents, pc, laptops, cameras
+                                             Cleaning gel for car, car cleaning kit universal detailing automotive dust
                                             </a>
                                             <p class="orders__result--item--description--note">Return or replace items eligible</p>
                                             <div class="orders__result--item--description--links">
@@ -307,7 +308,7 @@
                                         </a>
                                         <div class="orders__result--item--description">
                                             <a href="" class="orders__result--item--description--title">
-                                             Cleaning gel for car, car cleaning kit universal detailing automotive dust car crevice cleaner auto air vent interior detail removal putty cleaning keyboard cleaner for car vents, pc, laptops, cameras
+                                             Cleaning gel for car, car cleaning kit universal detailing automotive dust
                                             </a>
                                             <p class="orders__result--item--description--note">Return or replace items eligible</p>
                                             <div class="orders__result--item--description--links">
@@ -373,7 +374,7 @@
                                         </a>
                                         <div class="orders__result--item--description">
                                             <a href="" class="orders__result--item--description--title">
-                                             Cleaning gel for car, car cleaning kit universal detailing automotive dust car crevice cleaner auto air vent interior detail removal putty cleaning keyboard cleaner for car vents, pc, laptops, cameras
+                                             Cleaning gel for car, car cleaning kit universal detailing automotive dust
                                             </a>
                                             <p class="orders__result--item--description--note">Return or replace items eligible</p>
                                             <div class="orders__result--item--description--links">
@@ -389,7 +390,7 @@
                                         </a>
                                         <div class="orders__result--item--description">
                                             <a href="" class="orders__result--item--description--title">
-                                             Cleaning gel for car, car cleaning kit universal detailing automotive dust car crevice cleaner auto air vent interior detail removal putty cleaning keyboard cleaner for car vents, pc, laptops, cameras
+                                             Cleaning gel for car, car cleaning kit universal detailing automotive dust
                                             </a>
                                             <p class="orders__result--item--description--note">Return or replace items eligible</p>
                                             <div class="orders__result--item--description--links">
@@ -405,7 +406,7 @@
                                         </a>
                                         <div class="orders__result--item--description">
                                             <a href="" class="orders__result--item--description--title">
-                                             Cleaning gel for car, car cleaning kit universal detailing automotive dust car crevice cleaner auto air vent interior detail removal putty cleaning keyboard cleaner for car vents, pc, laptops, cameras
+                                             Cleaning gel for car, car cleaning kit universal detailing automotive dust
                                             </a>
                                             <p class="orders__result--item--description--note">Return or replace items eligible</p>
                                             <div class="orders__result--item--description--links">
