Add the required attribute to inputs

--- a/projects/amz-eg/index-login.html
+++ b/projects/amz-eg/index-login.html
@@ -109,7 +109,7 @@
                                         </label>
                                         <span class="signup__email--field--message" aria-live="polite"></span>
                                     </span>
-                                <input type="text" class="signup__name--field" id="signup__name--field" aria-label="required, enter an email address in a valid form">
+                                <input type="text" class="signup__name--field" id="signup__name--field" aria-label="required, enter an email address in a valid form" required>
                                 </span>
 
                                 <span class="signup__telephone__content">
