Add html for item's other info, protection plan, seller options, amazon icons, details, manufacturer notes and table

--- a/projects/amz-eg/index-item.html
+++ b/projects/amz-eg/index-item.html
@@ -145,7 +145,187 @@
                     <button class="content__item__ordering--orange-button orange-button">Buy Now</button>
                 </div>
 
+                <div class="content__item__other-info">
+                    <div>
+                        <span>Payment</span>
+                        <span><a href="">Secure transition</a></span></div>
+                    <div>
+                        <span>Ships from</span>
+                        <span>Amazon.eg</span></div>
+                    <div>
+                        <span>Sold by</span>
+                        <span><a href="">Amazon.eg</a></span></div>
+                </div>
 
+                <div class="content__item__free-shipping">
+                    <div class="white-button">Yes, I want FREE Shipping with Amazon Prime</div>
+                </div>
+
+
+
+                <div class="content__item__protection-plan full_width__border">
+
+                    <div>Add a Protection Plan</div>
+
+                    <a href="" class="content__item__protection-plan--content">
+                        <input type="checkbox" class="content__item__protection-plan--content--check">
+                        <div class="content__item__protection-plan--content--info">
+                            <div>1 Year Extended Warranty Plan for</div>
+                            <div>EGP 61.00</div>
+                        </div>
+                    </a>
+
+                    <div class="content__item__protection-plan--content--add-list">
+                        <a href="">Add to List</a>
+                    </div>
+
+                </div>
+
+
+                <div href="" class="content__item__seller-options--container">
+                    <h3>Other sellers on Amazon</h3>
+                    <a href="" class="content__item__seller-options full_width__border">
+                        Compare New & Used (5) from
+                        <div class="price-text--seller-options">
+                            <span class="">EGP</span>
+                            <span class="">599</span>
+                            <span class="">00</span>
+                        </div>
+                        <div>FREE Shipping</div>    
+                    </a>
+
+                    <div class="content__item__seller-options-note full_width__border">
+                        Available at a lower price from
+                        <a href="">other sellers</a>
+                        that may not offer free Prime Shipping
+                    </div>
+                </div>
+
+
+                <div class="content__item__icons full_width__border">
+                    <a href="">
+                        <img src="https://m.media-amazon.com/images/G/42/A2I-Convert/mobile/IconFarm/icon-cod._CB638858551_.png">
+                        <span>Cash on Delivery</span>
+                    </a>
+
+                    <a href="">
+                        <img src="https://m.media-amazon.com/images/G/42/A2I-Convert/mobile/IconFarm/icon-returns._CB403797073_.png">
+                        <span>15 days Returnable</span>
+                    </a>
+
+                    <a href="">
+                        <img src="https://m.media-amazon.com/images/G/42/A2I-Convert/mobile/IconFarm/trust_icon_free_shipping_81px._CB590597072_.png">
+                        <span>Free Delivery</span>
+                    </a>
+
+                    <a href="">
+                        <img src="https://m.media-amazon.com/images/G/42/A2I-Convert/mobile/IconFarm/icon-amazon-delivered._CB403797073_.png">
+                        <span>Delivered by Amazon</span>
+                    </a>
+                </div>
+
+
+
+                <div class="content__item__details-list full_width__border">
+                    <h3>Details</h3>
+                    <ul>
+                        <li>
+                            <span>Brand Name</span>
+                            <span>Joyroom</span>
+                        </li>
+
+                        <li>
+                            <span>Model Name</span>
+                            <span>JR-T03S</span>
+                        </li>
+
+                        <li>
+                            <span>Color</span>
+                            <span>White</span>
+                        </li>
+
+                        <li>
+                            <span>Type</span>
+                            <span>In Ear</span>
+                        </li>
+
+                        <li>
+                            <span>Connectivity Technology</span>
+                            <span>Wireless</span>
+                        </li>
+
+                        <li>
+                            <span>Wireless Communication Technology</span>
+                            <span>Bluetooth</span>
+                        </li>
+
+                        <li>
+                            <span>Special Features</span>
+                            <span>Lightweight</span>
+                        </li>
+
+                        <li>
+                            <span>Included Components</span>
+                            <span>Ear Cushions</span>
+                        </li>
+
+                        <li>
+                            <span>Age Range Description</span>
+                            <span>Adult</span>
+                        </li>
+
+                        <li>
+                            <span>Material</span>
+                            <span>Plastic</span>
+                        </li>
+                    </ul>
+                </div>
+
+
+                <div class="content__item__manufacturer-notes full_width__border">
+                    <div class="content__item__manufacturer-notes--intro full_width__border">
+                        <div class="content__item__manufacturer-notes--intro--image">
+                            <img src="./img/product-image.jpg" alt="screen protector">
+                        </div>
+
+                        <div class="content__item__manufacturer-notes--intro--text">
+                            COMFORTABLE, RESISTANT AND COMPATIBLE: Joyroom has taken into account the ear canal studies of thousands of people to develop earphones for greater comfort, stability and passive noise isolation.
+                        </div>
+                    </div>
+
+                    <div class="content__item__manufacturer-notes--description full_width__border">
+                        <h4>Description</h4>
+                        COMFORTABLE, RESISTANT AND COMPATIBLE: Joyroom has taken into account the ear canal studies of thousands of people to develop earphones for greater comfort, stability and passive noise isolation.
+                        COMFORTABLE, RESISTANT AND COMPATIBLE: Joyroom has taken into account the ear canal studies of thousands of people to develop earphones for greater comfort, stability and passive noise isolation.
+
+                    </div>
+
+                    <div class="content__item__manufacturer-notes--features">
+                        <h4>Features and Details</h4>
+                        <dl>
+                            <li>
+                                <span>
+                                COMFORTABLE, RESISTANT AND COMPATIBLE: Joyroom has taken into account the ear canal studies of thousands of people to develop earphones for greater comfort, stability and passive noise isolation.
+                                </span>
+                            </li>
+                            <li>
+                                <span>
+                                COMFORTABLE, RESISTANT AND COMPATIBLE: Joyroom has taken into account the ear canal studies of thousands of people to develop earphones for greater comfort, stability and passive noise isolation.
+                                </span>
+                            </li>
+                        </dl>
+                    </div>
+
+                    <div class="content__item__manufacturer-notes--information-table">
+                        <table>
+                            <tr><td>Manufacturer</td><td>Joyroom</td></tr>
+                            <tr><td>Country of origin</td><td>Samoa (Independent)</td></tr>
+                            <tr><td>Item model number</td><td>JR-T03S</td></tr>
+                            <tr><td>Package Dimensions</td><td>16.8 x 9.3 x 5.3 cm; 100 Grams</td></tr>
+                            <tr><td>ASIN</td><td>B09Y4K9CGP</td></tr>
+                        </table>
+                    </div>
+                </div>
 
 
 
