Add styling for manufacturer notes additional information, customer reviews area, site navigation area

--- a/projects/amz-eg/index-login.html
+++ b/projects/amz-eg/index-login.html
@@ -121,7 +121,7 @@
                                     </span>
     
                                     <select class="signup__telephone--region" aria-label="country telephone number first two digits selection"><option>EG +20</option></select>
-                                    <input type="tel" id="signup__telephone--input" aria-label="required, enter an 11 digit telephone number">
+                                    <input type="tel" id="signup__telephone--input" aria-label="required, enter an 11 digit telephone number" required>
                                 </span>
 
                                 <span class="signup__input-field">
@@ -132,7 +132,7 @@
                                         <span class="signup__password--field--message" aria-live="polite"></span>
                                     </span>
 
-                                <input type="password" class="signup__password--field" id="signup__password--field" aria-label="required, enter a password not less than 8 characters, may be letters, numbers or symbols">
+                                <input type="password" class="signup__password--field" id="signup__password--field" aria-label="required, enter a password not less than 8 characters, may be letters, numbers or symbols" required>
                                 <p class="signup__password--notify" aria-hidden="true" ><em>i</em> Passwords must be at least 8 characters</p>
                                 </span>
 
@@ -174,7 +174,7 @@
                                         <label for="login__email--field" class="login__email--label" >
                                             <h2>Email or phone number</h2>
                                         </label>
-                                    <input type="text" id="login__email--field" name="login__email--field" aria-label="required, enter your phone number or your email" placeholder="">
+                                    <input type="text" id="login__email--field" name="login__email--field" aria-label="required, enter your phone number or your email" placeholder="" required>
                                     <span class="login__email--field--message" aria-live="true">
                                     </span>
 
@@ -210,7 +210,7 @@
                                             <a class="login__password--current-phone--change"> Change</a>
                                         </div>
                                     </div>
-                                    <input type="text" id="login__password--field" name="login__password--field" aria-label="enter a password that matches the account related to the entered email or phone number, case sensitive">
+                                    <input type="text" id="login__password--field" name="login__password--field" aria-label="enter a password that matches the account related to the entered email or phone number, case sensitive" required>
 
                                     <span class="login__password--field--message" aria-live="true">
                                     </span>
